infrastructure/app/hubble-ui/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: cilium-system
spec:
  parentRefs:
    - name: cluster
      namespace: cilium-system
  hostnames:
    - "hubble.${cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
